--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,7 +18,8 @@ services:
       start_period: 20s
 
   order-api:
-    build: mas-order-api/.
+    build: order-api/.
+    restart: unless-stopped
     ports:
       - "8083:8083"
     depends_on:
@@ -30,6 +31,41 @@ services:
       SPRING_DATASOURCE_PASSWORD: rootpassword
     networks:
       - elk
+
+  product-db:
+    image: mysql:8.0
+    environment:
+      MYSQL_DATABASE: productdb
+      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_ROOT_HOST: '%'
+    ports:
+      - "3309:3306"
+    volumes:
+      - product-db-data:/var/lib/mysql
+    networks:
+      - elk
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      interval: 10s
+      retries: 5
+      start_period: 20s
+
+  product-api:
+    build: product-api/.
+    restart: unless-stopped
+    ports:
+      - "8082:8082"
+    depends_on:
+      product-db:
+        condition: service_healthy
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://product-db:3306/productdb
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: rootpassword
+    networks:
+      - elk
+
+
 
   elasticsearch:
     build:
