--- a/product-api/src/main/resources/application.properties
+++ b/product-api/src/main/resources/application.properties
@@ -10,4 +10,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# Kafka ?? (Kafka ?? ? ??)
+spring.kafka.bootstrap-servers=kafka:9092
+spring.kafka.consumer.group-id=product-group
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+# ElasticSearch ?? (ELK ?? ? ??)
+spring.elasticsearch.uris=http://elasticsearch:9200
+
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
