--- a/product-api/src/main/resources/application.properties
+++ b/product-api/src/main/resources/application.properties
@@ -13,8 +13,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 # Kafka ?? (Kafka ?? ? ??)
 spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.consumer.group-id=product-group
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 # ElasticSearch ?? (ELK ?? ? ??)
 spring.elasticsearch.uris=http://elasticsearch:9200
