--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,8 +1,79 @@
 input {
-	tcp {
-		port => 5001
-		codec => json
-	}
+    file {
+        path => "/var/log/app/user-api/user_click.log"
+        codec => json
+        type => "user_click"
+        tags => ["user-api"]
+    }
+    file {
+        path => "/var/log/app/product-api/user_click.log"
+        codec => json
+        type => "user_click"
+        tags => ["product-api"]
+    }
+    file {
+        path => "/var/log/app/order-api/user_click.log"
+        codec => json
+        type => "user_click"
+        tags => ["order-api"]
+    }
+
+    file {
+        path => "/var/log/app/user-api/user_expose.log"
+        codec => json
+        type => "user_expose"
+        tags => ["user-api"]
+    }
+    file {
+        path => "/var/log/app/product-api/user_expose.log"
+        codec => json
+        type => "user_expose"
+        tags => ["product-api"]
+    }
+    file {
+        path => "/var/log/app/order-api/user_expose.log"
+        codec => json
+        type => "user_expose"
+        tags => ["order-api"]
+    }
+
+    file {
+        path => "/var/log/app/user-api/user_purchase.log"
+        codec => json
+        type => "user_purchase"
+        tags => ["user-api"]
+    }
+    file {
+        path => "/var/log/app/product-api/user_purchase.log"
+        codec => json
+        type => "user_purchase"
+        tags => ["product-api"]
+    }
+    file {
+        path => "/var/log/app/order-api/user_purchase.log"
+        codec => json
+        type => "user_purchase"
+        tags => ["order-api"]
+    }
+
+    file {
+        path => "/var/log/app/user-api/access.log"
+        codec => json
+        type => "access"
+        tags => ["user-api"]
+    }
+    file {
+        path => "/var/log/app/product-api/access.log"
+        codec => json
+        type => "access"
+        tags => ["product-api"]
+    }
+    file {
+        path => "/var/log/app/order-api/access.log"
+        codec => json
+        type => "access"
+        tags => ["order-api"]
+    }
 }
 
 output {
