--- a/order-api/src/main/resources/application.properties
+++ b/order-api/src/main/resources/application.properties
@@ -30,9 +30,8 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
 # Logging for debugging
-logging.level.root=INFO
-logging.level.com.example=DEBUG
-logging.level.org.apache.kafka=INFO
-logging.level.org.springframework.kafka=INFO
-logging.level.org.springframework.transaction=DEBUG
+#logging.level.root=INFO
+#logging.level.org.apache.kafka=INFO
+#logging.level.org.springframework.kafka=INFO
+#logging.level.org.springframework.transaction=DEBUG
 
