logstash input,output 확인

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,78 +1,39 @@
 input {
     file {
-        path => "/var/log/app/user-api/user_click.log"
+        path => "/var/log/app/*/user_click.log"
         codec => json
         type => "user_click"
         tags => ["user-api"]
-    }
-    file {
-        path => "/var/log/app/product-api/user_click.log"
-        codec => json
-        type => "user_click"
-        tags => ["product-api"]
-    }
-    file {
-        path => "/var/log/app/order-api/user_click.log"
-        codec => json
-        type => "user_click"
-        tags => ["order-api"]
+        start_position => "beginning"
+        sincedb_path => "/dev/null"
     }
 
+
     file {
-        path => "/var/log/app/user-api/user_expose.log"
+        path => "/var/log/app/*/user_expose.log"
         codec => json
         type => "user_expose"
         tags => ["user-api"]
-    }
-    file {
-        path => "/var/log/app/product-api/user_expose.log"
-        codec => json
-        type => "user_expose"
-        tags => ["product-api"]
-    }
-    file {
-        path => "/var/log/app/order-api/user_expose.log"
-        codec => json
-        type => "user_expose"
-        tags => ["order-api"]
+        start_position => "beginning"
+        sincedb_path => "/dev/null"
     }
 
     file {
-        path => "/var/log/app/user-api/user_purchase.log"
+        path => "/var/log/app/*/user_purchase.log"
         codec => json
         type => "user_purchase"
         tags => ["user-api"]
-    }
-    file {
-        path => "/var/log/app/product-api/user_purchase.log"
-        codec => json
-        type => "user_purchase"
-        tags => ["product-api"]
-    }
-    file {
-        path => "/var/log/app/order-api/user_purchase.log"
-        codec => json
-        type => "user_purchase"
-        tags => ["order-api"]
+        start_position => "beginning"
+        sincedb_path => "/dev/null"
     }
 
     file {
-        path => "/var/log/app/user-api/access.log"
+        path => "/var/log/app/*/access.log"
         codec => json
         type => "access"
         tags => ["user-api"]
-    }
-    file {
-        path => "/var/log/app/product-api/access.log"
-        codec => json
-        type => "access"
-        tags => ["product-api"]
-    }
-    file {
-        path => "/var/log/app/order-api/access.log"
-        codec => json
-        type => "access"
-        tags => ["order-api"]
+        start_position => "beginning"
+        sincedb_path => "/dev/null"
     }
 }
 
@@ -85,6 +46,6 @@ output {
 	}
 
 	stdout {
-          id => "logstash"
+          codec => rubydebug
         }
 }
