user-api logService 추가

--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -18,6 +18,12 @@ configurations {
     }
 }
 
+dependencyManagement {
+    imports {
+        mavenBom "io.micrometer:micrometer-bom:1.9.0"
+    }
+}
+
 repositories {
     mavenCentral()
 }
