--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -69,40 +69,40 @@ services:
     networks:
       - elk
 
-#  user-db:
-#    image: mysql:8.0
-#    environment:
-#      MYSQL_DATABASE: userdb
-#      MYSQL_ROOT_PASSWORD: rootpassword
-#      MYSQL_ROOT_HOST: '%'
-#    ports:
-#      - "3308:3306"
-#    volumes:
-#      - user-db-data:/var/lib/mysql
-#    networks:
-#      - elk
-#    healthcheck:
-#      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
-#      interval: 10s
-#      retries: 5
-#      start_period: 20s
-#
-#  user-api:
-#    build: user-api/.
-#    restart: unless-stopped
-#    ports:
-#      - "8084:8084"
-#    depends_on:
-#      user-db:
-#        condition: service_healthy
-#    environment:
-#      SPRING_DATASOURCE_URL: jdbc:mysql://user-db:3306/userdb
-#      SPRING_DATASOURCE_USERNAME: root
-#      SPRING_DATASOURCE_PASSWORD: rootpassword
-#      volumes:
-#        - ./shared-logs/user-api:/var/logs/api-logs/user-api
-#    networks:
-#      - elk
+  user-db:
+    image: mysql:8.0
+    environment:
+      MYSQL_DATABASE: userdb
+      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_ROOT_HOST: '%'
+    ports:
+      - "3308:3306"
+    volumes:
+      - user-db-data:/var/lib/mysql
+    networks:
+      - elk
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
+      interval: 10s
+      retries: 5
+      start_period: 20s
+
+  user-api:
+    build: user-api/.
+    restart: unless-stopped
+    ports:
+      - "8084:8084"
+    depends_on:
+      user-db:
+        condition: service_healthy
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://user-db:3306/userdb
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: rootpassword
+    volumes:
+      - ./shared-logs/user-api:/var/logs/api-logs/user-api
+    networks:
+      - elk
 
   elasticsearch:
     build:
@@ -131,7 +131,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - type: bind
-        source: "./logs"
+        source: "./shared-logs"
         target: /var/log/app
         read_only: true
       - type: bind
@@ -141,10 +141,6 @@ services:
       - type: bind
         source: "./logstash/pipeline"
         target: /usr/share/logstash/pipeline
-        read_only: true
-      - type: bind
-        source: "./logs"
-        target: /var/log/app
         read_only: true
     ports:
       - "5001:5001/tcp"
@@ -205,6 +201,28 @@ services:
     networks:
       - elk
 
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - elk
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    networks:
+      - elk
+    depends_on:
+      - prometheus
+    volumes:
+      - grafana-storage:/var/lib/grafana
+
 networks:
   elk:
     driver: bridge
@@ -212,8 +230,9 @@ networks:
 volumes:
   order-db-data:
   product-db-data:
-#  user-db-data:
+  user-db-data:
   zookeeper_data:
     driver: local
   kafka_data:
     driver: local
+  grafana-storage:
