--- a/order-api/src/main/resources/application.properties
+++ b/order-api/src/main/resources/application.properties
@@ -14,13 +14,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 # Prometheus Actuator Endpoints
-#management.endpoints.web.exposure.include=prometheus,health,info,metric
-#management.endpoint.health.show-details=always
-#management.endpoint.metrics.enabled=true
-#management.endpoint.prometheus.enabled=true
-#management.metrics.export.prometheus.enabled=true
-#management.prometheus.metrics.export.enabled=true
-#management.metrics.tags.application=${spring.application.name:order-api}
+management.endpoints.web.exposure.include=prometheus,health,info
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+
 
 #Kafka
 spring.kafka.bootstrap-servers=kafka:9092
