--- a/product-api/src/main/resources/application.properties
+++ b/product-api/src/main/resources/application.properties
@@ -10,6 +10,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+management.endpoints.web.exposure.include=prometheus,health,info
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+
 # Kafka ?? (Kafka ?? ? ??)
 spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.consumer.group-id=product-group
