--- a/user-api/src/resources/application.properties
+++ b/user-api/src/resources/application.properties
@@ -10,4 +10,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+management.endpoints.web.exposure.include=prometheus,health,info
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+
+spring.elasticsearch.uris=http://elasticsearch:9200
+
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
