--- a/user-api/src/main/resources/application.properties
+++ b/user-api/src/main/resources/application.properties
@@ -14,6 +14,8 @@ management.endpoints.web.exposure.include=prometheus,health,info
 management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
 
+springdoc.show-actuator=true
+
 spring.elasticsearch.uris=http://elasticsearch:9200
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
