zipkin, seluth 추가

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -201,6 +201,14 @@ services:
     networks:
       - elk
 
+  zipkin:
+    image: openzipkin/zipkin:latest
+    container_name: zipkin
+    ports:
+      - "9411:9411"
+    networks:
+      - elk
+
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
