--- a/order-api/src/main/resources/application.properties
+++ b/order-api/src/main/resources/application.properties
@@ -27,6 +27,18 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.properties.spring.json.add.type.headers=false
 
+# ElasticSearch ?? (ELK ?? ? ??)
+spring.elasticsearch.uris=http://elasticsearch:9200
+
+# Zipkin ?? ?? (Docker ???? ?? ??)
+spring.zipkin.base-url=http://zipkin:9411
+
+# ??? ?? (1.0 = 100% ????)
+spring.sleuth.sampler.probability=1.0
+
+# ???? ID ?? ??
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+
 # Logging for debugging
 #logging.level.root=INFO
 #logging.level.org.apache.kafka=INFO
