--- a/product-api/build.gradle
+++ b/product-api/build.gradle
@@ -27,6 +27,12 @@ tasks.withType(JavaCompile) {
     options.compilerArgs += '11'
 }
 
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.7"
+    }
+}
+
 dependencies {
     // Spring Boot
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -50,6 +56,8 @@ dependencies {
 
     //kafka
     implementation 'org.springframework.kafka:spring-kafka'
+
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 
     // Lombok
     compileOnly 'org.projectlombok:lombok'
