--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -27,6 +27,13 @@ tasks.withType(JavaCompile) {
     options.compilerArgs += '11'
 }
 
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.7"
+    }
+}
+
+
 dependencies {
     // Spring Boot
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -54,6 +61,8 @@ dependencies {
     // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
 
     implementation("net.logstash.logback:logstash-logback-encoder:7.2")
 
