--- a/user-api/src/main/resources/application.properties
+++ b/user-api/src/main/resources/application.properties
@@ -18,4 +18,13 @@ springdoc.show-actuator=true
 
 spring.elasticsearch.uris=http://elasticsearch:9200
 
+# Zipkin ?? ?? (Docker ???? ?? ??)
+spring.zipkin.base-url=http://zipkin:9411
+
+# ??? ?? (1.0 = 100% ????)
+spring.sleuth.sampler.probability=1.0
+
+# ???? ID ?? ??
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
