--- a/order-api/src/main/resources/application.properties
+++ b/order-api/src/main/resources/application.properties
@@ -30,11 +30,9 @@ spring.kafka.producer.properties.spring.json.add.type.headers=false
 # ElasticSearch ?? (ELK ?? ? ??)
 spring.elasticsearch.uris=http://elasticsearch:9200
 
-# Zipkin ?? ?? (Docker ???? ?? ??)
 spring.zipkin.base-url=http://zipkin:9411
-
-# ??? ?? (1.0 = 100% ????)
 spring.sleuth.sampler.probability=1.0
+spring.zipkin.sender.type=web
 
 # ???? ID ?? ??
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
