--- a/product-api/src/main/resources/application.properties
+++ b/product-api/src/main/resources/application.properties
@@ -28,6 +28,8 @@ spring.elasticsearch.uris=http://elasticsearch:9200
 # Zipkin
 spring.zipkin.base-url=http://zipkin:9411
 spring.sleuth.sampler.probability=1.0
+spring.zipkin.sender.type=web
+
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
