zipkin 버전 및 의존성 수정

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -202,12 +202,14 @@ services:
       - elk
 
   zipkin:
-    image: openzipkin/zipkin:latest
+    image: openzipkin/zipkin:2.23
     container_name: zipkin
     ports:
       - "9411:9411"
     networks:
       - elk
+    environment:
+      - JAVA_OPTS=-Djava.net.preferIPv4Stack=true
 
   prometheus:
     image: prom/prometheus:latest
