--- a/product-api/build.gradle
+++ b/product-api/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'org.springframework.kafka:spring-kafka'
 
     implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.2.8.RELEASE'
 
     // Lombok
     compileOnly 'org.projectlombok:lombok'
