--- a/order-api/build.gradle
+++ b/order-api/build.gradle
@@ -57,13 +57,13 @@ dependencies {
     //kafka
     implementation 'org.springframework.kafka:spring-kafka'
 
-    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
-
     // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-
     implementation("net.logstash.logback:logstash-logback-encoder:7.2")
+
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.2.8.RELEASE'
 
     // Prometheus
     implementation 'io.micrometer:micrometer-registry-prometheus'
