--- a/user-api/build.gradle
+++ b/user-api/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
     implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+    implementation 'org.springframework.cloud:spring-cloud-starter-zipkin:2.2.8.RELEASE'
 
     implementation("net.logstash.logback:logstash-logback-encoder:7.2")
 
