--- a/order-api/build.gradle
+++ b/order-api/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     // Lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
     implementation("net.logstash.logback:logstash-logback-encoder:7.2")
 
     implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
