--- a/product-api/build.gradle
+++ b/product-api/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
     implementation("net.logstash.logback:logstash-logback-encoder:7.2")
 
     // Prometheus
