--- a/product-api/src/main/resources/application.properties
+++ b/product-api/src/main/resources/application.properties
@@ -30,6 +30,9 @@ spring.zipkin.base-url=http://zipkin:9411
 spring.sleuth.sampler.probability=1.0
 spring.zipkin.sender.type=web
 
+spring.redis.host= ${REDIS_HOST:localhost}
+spring.redis.port= ${REDIS_PORT:6379}
+
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
