--- a/product-api/src/main/resources/application.properties
+++ b/product-api/src/main/resources/application.properties
@@ -30,8 +30,10 @@ spring.zipkin.base-url=http://zipkin:9411
 spring.sleuth.sampler.probability=1.0
 spring.zipkin.sender.type=web
 
-spring.redis.host= ${REDIS_HOST:localhost}
-spring.redis.port= ${REDIS_PORT:6379}
+# Redis
+spring.cache.type=redis
+spring.redis.host=redis
+spring.redis.port=6379
 
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 
