--- a/product-api/build.gradle
+++ b/product-api/build.gradle
@@ -72,12 +72,15 @@ dependencies {
     implementation 'io.micrometer:micrometer-registry-prometheus'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
+    // Swagger
+    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+
+    implementation 'com.opencsv:opencsv:5.6'
+    implementation 'com.google.guava:guava:32.0.1-jre'
+
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
-
-    // Swagger
-    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 }
 
 test {
