--- a/product-api/src/main/resources/application.properties
+++ b/product-api/src/main/resources/application.properties
@@ -9,6 +9,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.jdbc.batch_size=1000
+spring.jpa.properties.hibernate.jdbc.order_inserts=true
+spring.jpa.properties.hibernate.jdbc.order_updates=true
+
 
 management.endpoints.web.exposure.include=prometheus,health,info
 management.endpoint.prometheus.enabled=true
