--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,16 @@
 services:
+  gateway-service:
+    build: gateway-service/.
+    restart: unless-stopped
+    ports:
+      - "8080:8080"
+    depends_on:
+      - product-api
+      - order-api
+      - user-api
+    networks:
+      - elk
+
   product-db:
     image: mysql:8.0
     environment:
