--- a/eureka-server/build.gradle
+++ b/eureka-server/build.gradle
@@ -27,24 +27,14 @@ tasks.withType(JavaCompile) {
     options.compilerArgs += '11'
 }
 
-dependencyManagement {
-    imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.7"
-    }
-}
-
 
 dependencies {
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server:3.1.1'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.kafka:spring-kafka-test'
-
-    // Swagger
-    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 }
 
 test {
