--- a/gateway-service/build.gradle
+++ b/gateway-service/build.gradle
@@ -22,30 +22,12 @@ repositories {
     mavenCentral()
 }
 
-tasks.withType(JavaCompile) {
-    options.compilerArgs += '--release'
-    options.compilerArgs += '11'
-}
-
-dependencyManagement {
-    imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2021.0.7"
-    }
-}
-
-
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-gateway'
+    implementation 'org.springframework.cloud:spring-cloud-starter-gateway:3.1.1'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.1'
 
-    // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.kafka:spring-kafka-test'
-
-    // Swagger
-    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 }
 
 test {
