--- a/eureka-server/build.gradle
+++ b/eureka-server/build.gradle
@@ -13,6 +13,9 @@ java {
 }
 
 configurations {
+    all {
+        exclude group: 'javax.servlet', module: 'servlet-api'
+    }
     compileOnly {
         extendsFrom annotationProcessor
     }
@@ -26,7 +29,6 @@ tasks.withType(JavaCompile) {
     options.compilerArgs += '--release'
     options.compilerArgs += '11'
 }
-
 
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server:3.1.1'
