--- a/order-api/build.gradle
+++ b/order-api/build.gradle
@@ -75,6 +75,8 @@ dependencies {
     // Swagger
     implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.1'
+
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
