--- a/product-api/build.gradle
+++ b/product-api/build.gradle
@@ -75,6 +75,8 @@ dependencies {
     // Swagger
     implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.1'
+
     implementation 'com.opencsv:opencsv:5.6'
     implementation 'com.google.guava:guava:32.0.1-jre'
 
