--- a/product-api/build.gradle
+++ b/product-api/build.gradle
@@ -82,7 +82,11 @@ dependencies {
 
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.kafka:spring-kafka-test'
+    testImplementation 'org.testcontainers:junit-jupiter:1.19.1'
+    testImplementation 'org.testcontainers:mysql:1.19.1'
+    testImplementation 'org.testcontainers:kafka:1.19.1'
+    testImplementation 'org.testcontainers:testcontainers'
+
 }
 
 test {
